# BE-REPO

./: .env.example  .gitignore  .init-letsencrypt.sh  LICENSE  docker-compose.yml  github-actions.docker-compose.yml  pyproject.toml
.github/workflows/: CD.yaml  admin-CI.yaml  admin-dev-CD.yaml  codespell.yml  guest-CI.yaml  guest-dev-CD.yaml  manager-CI.yaml  manager-dev-CD.yaml  partner-CI.yaml  partner-dev-CD.yaml  web_app-CI.yaml  web_app-dev-CD.yaml
admin-service/: .env.example  mypy.ini
admin-service/docker/: dev.Dockerfile  local.Dockerfile
admin/config/: root_urls.py
admin/config/django/: prod.py
admin/docker/: dev.Dockerfile  local.Dockerfile
admin/tests/: test_sum.py
admin_service/: .dockerignore  .env.example
admin_service/config/django/: base.py
admin_service/docker/: dev.Dockerfile  local.Dockerfile
guest-service/docker/: local.Dockerfile
guest/docker/: dev.Dockerfile
guest_service/: .env.example  mypy.ini
guest_service/config/: root_urls.py
guest_service/docker/: dev.Dockerfile  local.Dockerfile
manager-service/docker/: dev.Dockerfile
manager/docker/: local.Dockerfile
manager_service/docker/: dev.Dockerfile  local.Dockerfile
nginx/: default.conf  upstream.conf
nginx/conf/: nginx.conf
nginx/conf.d/: app.conf
partner_service/: .coveragerc  .env.example  mypy.ini
partner_service/config/: middleware.py  root_urls.py
partner_service/docker/: dev.Dockerfile  local.Dockerfile
partner_service/tests/: conftest.py  factories.py
web_app/: .coveragerc  mypy.ini
web_app/docker/: dev.Dockerfile  local.Dockerfile
(+114 files in other folders)
